--- a/config/config.yml
+++ b/config/config.yml
@@ -1,13 +1,13 @@
 OSS:
-  ENDPOINT: "oss-cn-shanghai.aliyuncs.com"
-  ACCESS_KEY_ID: "LTAI5tKhiieha9ae41L9muvE"
-  ACCESS_KEY_SECRET: "8LLKzgTJG0NOyNGG3nCjWsqUbheJyC"
-  BUCKET_NAME: "bycoin"
+  ENDPOINT: ""
+  ACCESS_KEY_ID: ""
+  ACCESS_KEY_SECRET: ""
+  BUCKET_NAME: ""
 
 MongoDB:
-  MONGODB_URL: "mongodb://192.168.2.84:27017"
+  MONGODB_URL: "mongodb://localhost:27017"
   DATABASE: "SanguoImage"
   COLLECTION: "Metadata"
 
-READ_FILEPATH: "E:\\DesktopFile\\Bycoin\\Sanguo_Male\\Sanguo_Male_N_Lastest\\"
-LOCAL_FILE: "E:\\10542\\Desktop\\test\\"
+READ_FILEPATH: ""
+LOCAL_FILE: ""
